# DesiGit

./: LICENSE  README.md  setup.cfg
src/desigit/: cli.py  commands.py  utils.py
