[metadata]
name = desigit
version = 0.1.0
author = Kabir Jaiswal, Aakash Bhatnagar
author_email = kabirjaiswal30@gmail.com, akashbharat.bhatnagar@gmail.com
description = A hinglish version of your friendly git
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kabir12345/desigit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    click>=7.0
    gitpython>=3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    desigit = desigit.cli:main